# GameOfTheMadGoose

./: CMakeLists.txt  GOP.cpp  README.md  cmake_install.cmake  main.cpp
giocatore/: Giocatore.h
source/: elements.cpp  elements.h
source/carta/: Carta.cpp  Carta.h  CartaAbbassa.cpp  CartaAbbassa.h  CartaGOP.cpp  CartaGOP.h  CartaImmunita.cpp  CartaImmunita.h  CartaIndovina.cpp  CartaIndovina.h  CartaInverti.cpp  CartaInverti.h  CartaRaddoppia.cpp  CartaRaddoppia.h
source/casella/: Casella.cpp  Casella.h  CasellaAllOrNothing.cpp  CasellaAllOrNothing.h  CasellaFermo.cpp  CasellaFermo.h  CasellaPesca.cpp  CasellaPesca.h  CasellaPunti.cpp  CasellaPunti.h  CasellaSwitch.cpp  CasellaSwitch.h
source/esecutore/: Esecutore.cpp  Esecutore.h
source/giocatore/: Giocatore.cpp  Giocatore.h
source/mazzo/: Mazzo.cpp  Mazzo.h
source/tabellone/: Tabellone.cpp  Tabellone.h
tabellone/: Tabellone.h
