cmake_minimum_required(VERSION 3.12)
project(GameOfTheMadGoose)

set(CMAKE_CXX_STANDARD 14)

add_executable(GameOfTheMadGoose GOP.cpp source/casella/Casella.cpp source/casella/Casella.h source/giocatore/Giocatore.cpp source/giocatore/Giocatore.h source/mazzo/Mazzo.cpp source/mazzo/Mazzo.h source/tabellone/Tabellone.cpp source/tabellone/Tabellone.h source/esecutore/Esecutore.cpp source/esecutore/Esecutore.h source/elements.cpp source/elements.h source/casella/CasellaFermo.cpp source/casella/CasellaFermo.h source/casella/CasellaPunti.cpp source/casella/CasellaPunti.h source/carta/Carta.cpp source/carta/Carta.h source/carta/CartaAbbassa.cpp source/carta/CartaAbbassa.h source/carta/CartaGOP.cpp source/carta/CartaGOP.h source/carta/CartaImmunita.cpp source/carta/CartaImmunita.h source/carta/CartaIndovina.cpp source/carta/CartaIndovina.h source/carta/CartaInverti.cpp source/carta/CartaInverti.h source/carta/CartaRaddoppia.cpp source/carta/CartaRaddoppia.h source/casella/CasellaPesca.cpp source/casella/CasellaPesca.h)